# discrete-representation-exploraion

./: .gitignore  pip_env.txt  pyproject.toml  requirements.txt
discrete_mbrl/: comet_sweep.py  data_logging.py  env_helpers.py  model_construction.py  slurm_job.sh  training_helpers.py  visualization.py  wandb_sweep.py
discrete_mbrl/analysis/: plotting_utils.py
discrete_mbrl/analysis/comet_ml/: download_data.py
discrete_mbrl/analysis/comet_ml/notebooks/minigrid_model_free/: hyperparameter_analysis.ipynb  vanilla_rl_analysis.ipynb
discrete_mbrl/analysis/wandb/: download_data.py
discrete_mbrl/analysis/wandb/notebooks/mini_grid_model_free_pos/: position.ipynb
discrete_mbrl/model_free/: rl_utils.py  train.py
discrete_mbrl/scripts/: slurm_job.sh  slurm_job_visitation_wandb.sh
discrete_mbrl/sweep_configs/comet_ml/model_free_experiments/delayed_vanilla_mf/: ae_crossing.json  ae_door_key.json  fta_ae_door_key.json  softmax_ae_door_key.json  vqvae_count_door_key.json  vqvae_count_door_key_short.json  vqvae_door_key.json
discrete_mbrl/sweep_configs/comet_ml/model_free_experiments/delayed_vanilla_mf_sweep/: ae_door_key.json  fta_ae_door_key.json  vqvae_count_door_key.json  vqvae_count_door_key_16.json  vqvae_count_door_key_short_episode.json
discrete_mbrl/sweep_configs/comet_ml/model_free_experiments/delayed_visitation_count/: vqvae_count_door_key.json
discrete_mbrl/sweep_configs/comet_ml/model_free_experiments/vanilla_mf/: vqvae_count_door_key.json  vqvae_door_key.json  vqvae_door_key_count.json
shared/models/: sb3_models.py  transition_models.py
(+3 files in other folders)
